# async-chat

./: Dockerfile  Makefile  README.md  client.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
app/: __init__.py  main.py  managers.py  settings.py
templates/: chat.html
tests/: conftest.py  test_app.py
